// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandCollapseOnlyModifierButtons renders per snapshot 1`] = `
<div
  className="cardsVisualizationModifiersContainer"
>
  <ExpandCollapseAllButton
    allCardsCollapsed={true}
    cardSelectionMessageCreator={{}}
    visualHelperEnabled={true}
  />
</div>
`;

exports[`ExpandCollapseVisualHelperModifierButtons renders per snapshot 1`] = `
<div
  className="cardsVisualizationModifiersContainer"
>
  <ExpandCollapseAllButton
    allCardsCollapsed={true}
    cardSelectionMessageCreator={{}}
    visualHelperEnabled={true}
  />
  <VisualHelperToggle
    allCardsCollapsed={true}
    cardSelectionMessageCreator={{}}
    visualHelperEnabled={true}
  />
</div>
`;
